@@ -39,7 +39,7 @@
                                     </label>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="Mup-7e-09B">
                                         <rect key="frame" x="0.0" y="48" width="560" height="359"/>
-                                        <color key="backgroundColor" red="0.8666666666666667" green="0.8666666666666667" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                     </tableView>
                                 </subviews>
                                 <constraints>
@@ -149,9 +149,8 @@
                                         <fontDescription key="fontDescription" name="HelveticaNeue-CondensedBold" family="Helvetica Neue" pointSize="14"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mBm-c8-gxS" userLabel="Distance_Traveled_Value">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mBm-c8-gxS" userLabel="Distance_Traveled_Value">
                                         <rect key="frame" x="164" y="8" width="118" height="20"/>
-                                        <color key="backgroundColor" red="0.93333333330000001" green="0.93333333330000001" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="118" id="VHY-0T-Hf8"/>
                                             <constraint firstAttribute="height" constant="20" id="yrM-TN-rtf"/>
@@ -168,9 +167,8 @@
                                         <fontDescription key="fontDescription" name="HelveticaNeue-CondensedBold" family="Helvetica Neue" pointSize="14"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cdb-2a-5VX" userLabel="Current_Speed_Value">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cdb-2a-5VX" userLabel="Current_Speed_Value">
                                         <rect key="frame" x="164" y="36" width="118" height="20"/>
-                                        <color key="backgroundColor" red="0.93333333330000001" green="0.93333333330000001" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="118" id="JTa-OI-ecd"/>
                                             <constraint firstAttribute="height" constant="20" id="eJe-oO-boZ"/>
@@ -187,9 +185,8 @@
                                         <fontDescription key="fontDescription" name="HelveticaNeue-CondensedBold" family="Helvetica Neue" pointSize="14"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lsl-yj-eJV" userLabel="Current_Time_Value">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lsl-yj-eJV" userLabel="Current_Time_Value">
                                         <rect key="frame" x="164" y="64" width="118" height="20"/>
-                                        <color key="backgroundColor" red="0.93333333330000001" green="0.93333333330000001" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="118" id="Bm6-XQ-EXX"/>
                                             <constraint firstAttribute="height" constant="20" id="n26-P0-glU"/>
@@ -198,7 +195,6 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" red="0.86666666670000003" green="0.86666666670000003" blue="0.86666666670000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="Cdb-2a-5VX" firstAttribute="leading" secondItem="mBm-c8-gxS" secondAttribute="leading" id="0lC-o0-K03"/>
                                     <constraint firstAttribute="height" constant="93" id="An3-Au-bxO"/>
@@ -215,14 +211,6 @@
                                     <constraint firstItem="Cdb-2a-5VX" firstAttribute="baseline" secondItem="GbC-dO-Z1b" secondAttribute="baseline" id="izx-I8-ova"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j0j-6e-D1M" userLabel="Map_Container" customClass="MGLMapView">
-                                <rect key="frame" x="20" y="226" width="560" height="354"/>
-                                <color key="backgroundColor" red="0.86666666670000003" green="0.86666666670000003" blue="0.86666666670000003" alpha="1" colorSpace="calibratedRGB"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="boolean" keyPath="showsUserLocation" value="NO"/>
-                                    <userDefinedRuntimeAttribute type="string" keyPath="styleURL__" value="mapbox://styles/mapbox/dark-v9"/>
-                                </userDefinedRuntimeAttributes>
-                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CWK-GB-zQm" userLabel="Action_Button_Container">
                                 <rect key="frame" x="20" y="173" width="560" height="45"/>
                                 <subviews>
@@ -234,7 +222,6 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" red="0.86666666670000003" green="0.86666666670000003" blue="0.86666666670000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="8kB-p2-mqB" firstAttribute="trailing" secondItem="CWK-GB-zQm" secondAttribute="trailingMargin" id="62Q-tt-cS0"/>
                                     <constraint firstItem="8kB-p2-mqB" firstAttribute="bottom" secondItem="CWK-GB-zQm" secondAttribute="bottomMargin" id="6gt-rd-vmu"/>
@@ -242,6 +229,13 @@
                                     <constraint firstItem="8kB-p2-mqB" firstAttribute="leading" secondItem="CWK-GB-zQm" secondAttribute="leadingMargin" id="HSY-4v-lNh"/>
                                     <constraint firstItem="8kB-p2-mqB" firstAttribute="top" secondItem="CWK-GB-zQm" secondAttribute="topMargin" id="QG6-Ol-BgX"/>
                                 </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j0j-6e-D1M" userLabel="Map_Container" customClass="MGLMapView">
+                                <rect key="frame" x="20" y="226" width="560" height="354"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="showsUserLocation" value="NO"/>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="styleURL__" value="mapbox://styles/mapbox/dark-v9"/>
+                                </userDefinedRuntimeAttributes>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="0.93333333330000001" green="0.93333333330000001" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
